fix: update dark mode

--- a/docs/.vitepress/style/vars.css
+++ b/docs/.vitepress/style/vars.css
@@ -12,8 +12,6 @@
   --vp-c-brand-darker: #eeeeee;
   --vp-code-block-bg: rgba(125,125,125,0.04);
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
-
-  --vp-sidebar-width:300px
 }
 
 /**
